--- a/flutter_lyra/pubspec.yaml
+++ b/flutter_lyra/pubspec.yaml
@@ -20,8 +20,10 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_lyra_android: ^0.3.1
-  flutter_lyra_ios: ^0.3.1
+  flutter_lyra_android: 
+    path: ../flutter_lyra_android
+  flutter_lyra_ios: 
+    path: ../flutter_lyra_ios
   flutter_lyra_platform_interface: ^0.3.1
 dev_dependencies:
   analyzer: ^4.7.0
