--- a/flutter_lyra_ios/pubspec.yaml
+++ b/flutter_lyra_ios/pubspec.yaml
@@ -1,8 +1,7 @@
 name: flutter_lyra_ios
 description: iOS implementation of the flutter_lyra plugin
 version: 0.3.1
-homepage: https://github.com/bamlab/Flutter-Lyra
-repository: https://github.com/bamlab/Flutter-Lyra
+publish_to: none
 
 environment:
   sdk: ">=2.19.0 <3.0.0"
